# third-party-api-clients

./: Cargo.toml  Makefile  output.txt
generator/src/: client.rs  main.rs  template.rs  types.rs
microsoft/graph/: Cargo.toml  README.md
microsoft/graph/src/: lib.rs  users_actions.rs  users_agreement_acceptance.rs  users_app_role_assignment.rs  users_authentication.rs  users_calendar.rs  users_calendar_group.rs  users_chat.rs  users_contact.rs  users_contact_folder.rs  users_device_management_troubleshooting_event.rs  users_directory_object.rs  users_drive.rs  users_event.rs  users_extension.rs  users_functions.rs  users_inference_classification.rs  users_license_details.rs  users_mail_folder.rs  users_mailbox_settings.rs  users_managed_app_registration.rs  users_managed_device.rs  users_message.rs  users_o_auth_2_permission_grant.rs  users_office_graph_insights.rs  users_onenote.rs  users_online_meeting.rs  users_outlook_user.rs  users_person.rs  users_planner_user.rs  users_presence.rs  users_profile_photo.rs  users_scoped_role_membership.rs  users_site.rs  users_team.rs  users_todo.rs  users_user.rs  users_user_activity.rs  users_user_settings.rs  users_user_teamwork.rs
